Changelog for SimpleSearch.

- Fixed generating extracts

SimpleSearch 1.9.1
========================================================================
- Fixed indexing resource when it's not published or deleted
- Fixed error with redeclared function in plugin
- Added includeTVList parameter

SimpleSearch 1.9.0
========================================================================
- Added extractSource parameter - names the field for the extract, or a snippet to run (which is passed the resource array as properties)

SimpleSearch 1.8.1
========================================================================
- Added snippet for definition of ElasticSearch index (duplicate it and remove the _default from name to prevent recreating after update)

SimpleSearch 1.8.0
========================================================================
- Added support to ElasticSearch driver for using search fields
- Added support to ElasticSearch driver for boosting results by a field value
- Updated Elastica to v0.90.7.0
- [#84] Czech localization
- [#78] Japanese localization
- [#77] Enable $tvPrefix to prefix TV placeholders
- [#2] Do not search TV values if includeTVs != 1 (modxcms/SimpleSearch#2)
- [#1] Fixed SQL for "exclude" parameter (modxcms/SimpleSearch#1)
- Added driver for ElasticSearch
- Added support to ElasticSearch driver for using search fields
- Added support to ElasticSearch driver for boosting results by a field value
- Updated Elastica to v0.90.7.0
- Added outputSeparator option 

SimpleSearch 1.7.0
========================================================================
- Added driver for ElasticSearch

SimpleSearch 1.6.1
========================================================================
- [#69] Apply additional guard against injection of modx tags

SimpleSearch 1.6.0
========================================================================
- [#65] Fix issue with multiple search terms highlighting